# BookingCore

./: .gitignore  README.md  main.py  project_structure.py  pyproject.toml
app/: schemas.py  settings.py
core/: config.py  constants.py  dependencies.py  middleware.py
db/: config.py  models.py
db/models/: base.py  booking.py  business.py  payment.py  service.py  subscription.py  user.py
decorators/: permissions.py
migrations/: env.py
migrations/versions/: 093fa13cd4de_change_the_type_of_the_chat_id_column_.py  282133febf23_add_a_new_field_master_id_to_the_booking.py  2bce71b48048_delete_referrals_table.py  34a0a7101e28_update_relationship.py  3d3fe9bca6c2_change_link.py  4683f0f0ef98_update_tables.py  52244f32b5fa_change_the_type_of_the_working_hours_.py  56aa2a2ce437_init.py  5f88b99ceda4_delete_field_transaction_id_and_update_.py  733cda946c67_edit_and_add_new_column.py  858cd275ee2d_update_tables.py  877a154d9ca6_create_payments_table.py  8d13e67aaeb6_update_the_services_table.py  91b848a348de_change_column_type_phone.py  955a3ac98dd9_delete_table_masters.py  a7a6a705ffe9_changed_the_admin_column_to_role_in_the_.py  add98606e782_update_masters.py  b54bf44a3d1c_delete_working_hours.py  bb65fa75ab3f_change_column_name_id_to_user_id_in_the_.py  (+9 more)
schemas/: booking.py  business_info.py  date.py  feedback.py  master.py  payment.py  service.py  time.py  user.py
scripts/: start_celery.sh
services/: booking.py  business_info_service.py  datetime_service.py  http_client.py  notifications.py  subscription.py  user.py
src/: main.py
tasks/: celery_app.py  deactivate_bookings.py  deactivate_dates.py  deactivate_times.py  reminders.py
utils/: encryption.py  interfaces.py  validators.py
(+151 files in other folders)
