[tool.poetry]
name = "bookingcore"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Moses-93 <moieseenko2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.115.6"
uvicorn = {extras = ["standart"], version = "0.34.0"}
sqlalchemy = "2.0.36"
asyncio = "3.4.3"
asyncpg = "0.30.0"
alembic = "1.14.0"
boto3 = "^1.35.92"
python-dotenv = "^1.0.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
